--- a/src/bukkit-plugin/pom.xml
+++ b/src/bukkit-plugin/pom.xml
@@ -95,6 +95,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <!-- Do not shade it: we already rely on mysql-connector-j -->
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
       <scope>provided</scope>
@@ -341,6 +347,7 @@
           <ignoredUnusedDeclaredDependencies combine.children="append">
             <ignoredUnusedDeclaredDependency>com.mysql:mysql-connector-j</ignoredUnusedDeclaredDependency>
             <ignoredUnusedDeclaredDependency>org.xerial:sqlite-jdbc</ignoredUnusedDeclaredDependency>
+            <ignoredUnusedDeclaredDependency>org.mariadb.jdbc:mariadb-java-client</ignoredUnusedDeclaredDependency>
           </ignoredUnusedDeclaredDependencies>
         </configuration>
       </plugin>
