--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -48,6 +48,9 @@ jobs:
           java-version: 17
           distribution: temurin
 
+      - name: Testcontainers - Enable reusable containers
+        run: echo 'testcontainers.reuse.enable=true' >> ~/.testcontainers.properties
+
       - name: Cache local Maven repository
         uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
