--- a/src/bukkit-patch-adapter/src/test/resources/fr/djaytan/mc/jrppb/bukkit/adapter/MysqlPatchPlaceBreakBukkitAdapterApiIntegrationTest/mysql.conf
+++ b/src/bukkit-patch-adapter/src/test/resources/fr/djaytan/mc/jrppb/bukkit/adapter/MysqlPatchPlaceBreakBukkitAdapterApiIntegrationTest/mysql.conf
@@ -29,10 +29,10 @@ dbmsServer {
     # Credentials for authentication with the DBMS server
     credentials {
         # Password of the user (optional but highly recommended)
-        password=""
+        password="%3$s"
         # Under behalf of which user to connect on the DBMS server
         # Value can't be empty or blank
-        username=root
+        username="%2$s"
     }
     # The database to use on DBMS server
     # Value can't be empty or blank
@@ -47,7 +47,7 @@ dbmsServer {
         isSslEnabled=true
         # Port
         # Accepted range values: [1-65535]
-        port=%d
+        port=%1$d
     }
 }
 # The table where data will be stored
