build: change the default goal so that "-pl" option becomes usable

--- a/pom.xml
+++ b/pom.xml
@@ -308,7 +308,7 @@
   </repositories>
 
   <build>
-    <defaultGoal>clean verify</defaultGoal>
+    <defaultGoal>clean install</defaultGoal>
     <pluginManagement>
       <plugins>
         <plugin>
