--- a/pom.xml
+++ b/pom.xml
@@ -508,8 +508,6 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.1.2</version>
         <configuration>
-          <!--suppress UnresolvedMavenProperty - Defined at runtime by JaCoCo -->
-          <argLine>${failsafe.jacoco.args}</argLine>
           <includes>
             <include>**/*IntegrationTest.java</include>
           </includes>
@@ -577,9 +575,6 @@
         <version>3.1.2</version>
         <configuration>
           <parallel>all</parallel>
-          <useUnlimitedThreads>true</useUnlimitedThreads>
-          <!--suppress UnresolvedMavenProperty - Defined at runtime by JaCoCo -->
-          <argLine>${surefire.jacoco.args}</argLine>
           <excludes>
             <exclude>**/*IntegrationTest.java</exclude>
           </excludes>
@@ -601,77 +596,28 @@
         <version>0.8.11</version>
         <executions>
           <execution>
-            <id>before-unit-test-execution</id>
+            <id>prepare-agent-for-unit-tests</id>
             <goals>
               <goal>prepare-agent</goal>
             </goals>
-            <phase>initialize</phase>
-            <configuration>
-              <destFile>${project.build.directory}/jacoco-output/jacoco-unit-tests.exec</destFile>
-              <propertyName>surefire.jacoco.args</propertyName>
-            </configuration>
           </execution>
           <execution>
-            <id>after-unit-test-execution</id>
+            <id>prepare-agent-for-integration-tests</id>
             <goals>
               <goal>report</goal>
             </goals>
-            <phase>prepare-package</phase>
-            <configuration>
-              <dataFile>${project.build.directory}/jacoco-output/jacoco-unit-tests.exec</dataFile>
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-unit-test-coverage-report</outputDirectory>
-            </configuration>
           </execution>
           <execution>
-            <id>before-integration-test-execution</id>
+            <id>report-unit-tests</id>
             <goals>
-              <goal>prepare-agent</goal>
+              <goal>prepare-agent-integration</goal>
             </goals>
-            <phase>pre-integration-test</phase>
-            <configuration>
-              <destFile>${project.build.directory}/jacoco-output/jacoco-integration-tests.exec</destFile>
-              <propertyName>failsafe.jacoco.args</propertyName>
-            </configuration>
           </execution>
           <execution>
-            <id>after-integration-test-execution</id>
+            <id>report-integration-tests</id>
             <goals>
-              <goal>report</goal>
+              <goal>report-integration</goal>
             </goals>
-            <phase>post-integration-test</phase>
-            <configuration>
-              <dataFile>${project.build.directory}/jacoco-output/jacoco-integration-tests.exec</dataFile>
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-integration-test-coverage-report</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>merge-unit-and-integration</id>
-            <goals>
-              <goal>merge</goal>
-            </goals>
-            <phase>post-integration-test</phase>
-            <configuration>
-              <fileSets>
-                <fileSet>
-                  <directory>${project.build.directory}/jacoco-output/</directory>
-                  <includes>
-                    <include>*.exec</include>
-                  </includes>
-                </fileSet>
-              </fileSets>
-              <destFile>${project.build.directory}/jacoco-output/merged.exec</destFile>
-            </configuration>
-          </execution>
-          <execution>
-            <id>create-merged-report</id>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <phase>post-integration-test</phase>
-            <configuration>
-              <dataFile>${project.build.directory}/jacoco-output/merged.exec</dataFile>
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-merged-test-coverage-report</outputDirectory>
-            </configuration>
           </execution>
         </executions>
       </plugin>
