test: setup module dedicated to conformance tests
This is where a part of acceptance tests are supposed to be defined. Tests written here are supposed to be "black box", meaning they know nothing about implementation details and focus instead exclusively on outcomes.

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <module>src/commons-test</module>
     <module>src/patch-place-break-api</module>
     <module>src/patch-place-break-core</module>
+    <module>src/patch-place-break-cts</module>
     <module>src/spigot-patch-adapter</module>
     <module>src/spigot-plugin</module>
   </modules>
