chore: automatically run Renovate only once per month
Signed-off-by: Djaytan <26904516+Djaytan@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
   ],
   "prHourlyLimit": 10,
   "schedule": [
-    "before 5am on monday"
+    "before 6am on the first day of the month"
   ],
   "packageRules": [
     {
