--- a/src/spigot-plugin/pom.xml
+++ b/src/spigot-plugin/pom.xml
@@ -46,24 +46,24 @@
 
   <dependencies>
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>patch-place-break-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>patch-place-break-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>spigot-patch-adapter</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github.Djaytan</groupId>
       <artifactId>bukkit-slf4j</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>fr.djaytan.mc.jrppb</groupId>
-      <artifactId>patch-place-break-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>fr.djaytan.mc.jrppb</groupId>
-      <artifactId>patch-place-break-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>fr.djaytan.mc.jrppb</groupId>
-      <artifactId>spigot-patch-adapter</artifactId>
     </dependency>
     <dependency>
       <groupId>jakarta.inject</groupId>
