ci: adjust status checks names by updating jobs' ones

--- a/.github/workflows/security-scan-codeql.yml
+++ b/.github/workflows/security-scan-codeql.yml
@@ -30,7 +30,7 @@ on:
 
 jobs:
   analyze:
-    name: Analyze
+    name: CodeQL - Analyze
     permissions:
       actions: read
       contents: read
