--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,13 @@
         "maven"
       ],
       "groupName": "Maven plugins"
+    },
+    {
+      "matchUpdateTypes": [
+        "patch"
+      ],
+      "matchCurrentVersion": "!/^0/",
+      "automerge": true
     }
   ]
 }
